deputy-library/src/snapshots/deputy_library__validation__tests__condition_type_package_is_parsed_and_passes_validation.snap
---
source: deputy-library/src/validation.rs
expression: project
---
[package]
name = 'my-cool-feature'
description = 'description'
version = '1.0.0'
license = 'Apache-2.0'

[content]
type = 'Condition'

[condition]
command = 'executable/path.sh'
interval = 30
