deputy-library/src/snapshots/deputy_library__validation__tests__feature_type_package_is_parsed_and_passes_validation.snap
---
source: deputy-library/src/validation.rs
expression: project
---
[package]
name = 'my-cool-feature'
description = 'description'
version = '1.0.0'
license = 'Apache-2.0'

[content]
type = 'Feature'

[feature]
type = 'Configuration'
action = 'ping 8.8.8.8'
assets = [
    [
    'src/configs/my-cool-config1.yml',
    '/var/opt/my-cool-service1',
    '744',
],
    [
    'src/configs/my-cool-config2.yml',
    '/var/opt/my-cool-service2',
    '777',
],
    [
    'src/configs/my-cool-config3.yml',
    '/var/opt/my-cool-service3',
],
]
